chore(core): rename CryptoService to EncryptionService and made the key optional