@@ -2,12 +2,13 @@ package io.kestra.core.runners.pebble.functions;
 
 import io.kestra.core.exceptions.IllegalVariableEvaluationException;
 import io.kestra.core.runners.VariableRenderer;
-import io.micronaut.context.annotation.Property;
+import io.micronaut.context.annotation.Value;
 import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
 import jakarta.inject.Inject;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
+import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
@@ -19,26 +20,28 @@ class EncryptDecryptFunctionTest {
     @Inject
     private VariableRenderer variableRenderer;
 
+    @Value("${kestra.encryption.secret-key}")
+    private String secretKey;
+
     @Test
-    void notConfigured() {
+    void missingParameter() {
         assertThrows(
-            IllegalArgumentException.class,
+            IllegalVariableEvaluationException.class,
             () -> variableRenderer.render("{{encrypt('toto')}}", Collections.emptyMap())
         );
 
         assertThrows(
-            IllegalArgumentException.class,
+            IllegalVariableEvaluationException.class,
             () -> variableRenderer.render("{{decrypt('toto')}}", Collections.emptyMap())
         );
     }
 
     @Test
-    @Property(name = "kestra.crypto.secret-key", value = "I6EGNzRESu3X3pKZidrqCGOHQFUFC0yK")
     void encryptDecrypt() throws IllegalVariableEvaluationException {
-        String encrypted = variableRenderer.render("{{encrypt('toto')}}", Collections.emptyMap());
+        String encrypted = variableRenderer.render("{{encrypt(secretKey, 'toto')}}", Map.of("secretKey", secretKey));
         assertThat(encrypted, notNullValue());
 
-        String decrypted = variableRenderer.render("{{decrypt('" + encrypted + "')}}", Collections.emptyMap());
+        String decrypted = variableRenderer.render("{{decrypt(secretKey, '" + encrypted + "')}}", Map.of("secretKey", secretKey));
         assertThat(decrypted, is("toto"));
     }
 }
